fix: align the icons and add number in workspace

--- a/waybar/awe/style.css
+++ b/waybar/awe/style.css
@@ -35,7 +35,7 @@ window#waybar.hidden {
 }
 
 #workspaces button {
-    padding: 0px;
+    padding: 0 6px 0 0;
     margin: 4px 0 6px 0;
     background-color: transparent;
     color: #ffffff;
@@ -43,7 +43,7 @@ window#waybar.hidden {
 }
 
 #workspaces button.active {
-    padding: 0 0 0 0;
+    padding: 0 6px 0 0;
     margin: 4px 0 6px 0;
     background-color: #ddddff;
     color: #303030;
